ser arm friendly package